<resources>
    <string name="app_name">SaitanaCycleModule</string>
    <string name="title_activity_maps">Map</string>
    <string name="rent">Do you want to rent bicycle from this place?</string>
    <string name="payment_success">Payment successful</string>
    <string name="authentication_unsuccess">Authentication unsuccessful, please try again!</string>
    <string name="enter_code">Enter 4 digit security code</string>
    <string name="enter_expiration_date">Enter expiration date in MM/YY</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="entername">Enter your full name as shown on the card</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_password">Password</string>
    <string name="enter_username">Email</string>
    <string name="invalid_name_number_code">Invalid details!</string>
    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>
</resources>
