<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetna_priya.saitanacyclemodule.PaymentActivity">

    <TextView
        android:id="@+id/tv_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_card_number"/>

    <EditText
        android:id="@+id/enter_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entername"/>

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

        <TextView
            android:id="@+id/tv_security_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_code"/>


        <EditText
            android:id="@+id/enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


    <TextView
        android:id="@+id/tv_exp_month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_expiration_date"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/months"
                android:layout_margin="@dimen/padding_spinner" />

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/years"
                android:layout_margin="@dimen/padding_spinner"/>

        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

    </LinearLayout>

